k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend--VERSION-
  labels:
    app: backend
    version: -VERSION-
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: -VERSION-
  template:
    metadata:
      labels:
        app: backend
        version: -VERSION-
    spec:
      containers:
        - name: api
          image: -IMAGEHASH-
          imagePullPolicy: Always
